@@ -1,3 +1,6 @@
+* Sun Jan 30 2022 Trevor Vaughan <trevor@sicurs.us> - 7.1.1
+- Added support for Amazon Linux 2
+
 * Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
